src/main/java/com/example/couponsproject/error/excpetion/ApplicationException.java
package com.example.couponsproject.error.excpetion;

public class ApplicationException extends Exception{
    public ApplicationException(String message) {
        super(message);
    }
}
